--- a/server/package.json
+++ b/server/package.json
@@ -7,52 +7,51 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:run": "vitest run",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "openai": "^4.20.1",
-    "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^5.0.3",
     "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "drizzle-orm": "^0.29.3",
-    "postgres": "^3.4.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4",
-    "express-rate-limit": "^7.1.5",
+    "cheerio": "^1.0.0-rc.12",
     "compression": "^1.7.4",
-    "express-validator": "^7.0.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.1",
+    "postgres": "^3.4.3",
+    "tesseract.js": "^5.0.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/compression": "^1.7.5",
     "@types/node": "^20.9.0",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
     "@types/supertest": "^2.0.16",
     "drizzle-kit": "^0.20.9",
-    "tsx": "^4.6.2"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.2.2",
+    "vitest": "^1.6.1"
   },
   "keywords": [
     "api",
@@ -63,4 +62,4 @@
   ],
   "author": "Your Name",
   "license": "MIT"
-} 
+}
