--- a/env.example
+++ b/env.example
@@ -19,8 +19,9 @@ AMAZON_REGION=us-east-1
 # Open Food Facts API (free, no key needed)
 OPENFOODFACTS_API_URL=https://world.openfoodfacts.org/api/v0
 
-# OCR Configuration (Tesseract.js)
-TESSERACT_LANG=eng
+# Instagram API Configuration
+INSTAGRAM_ACCESS_TOKEN=your_instagram_access_token_here
+ENABLE_SCRAPING_FALLBACK=false
 
 # JWT Secret for authentication
 JWT_SECRET=your_jwt_secret_here
