--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,10 @@
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^12.2.0",
     "cheerio": "^1.0.0-rc.12",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -31,7 +33,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.1",
-    "postgres": "^3.4.3",
+    "postgres": "^3.4.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
